{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 61,
  "lineage": "d25e2333-de68-56f5-7c8d-708dddf6e2f4",
  "resources": [
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-dev",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "medicare",
                  "environment": "dev",
                  "managed-by": "terraform"
                },
                "name": "medicare-dev",
                "resource_version": "157323",
                "uid": "dab50ace-b70d-4418-9925-caa5b32472fb"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "medicare-dev"
          }
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_intra_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-dev/medicare-dev-allow-intra-ns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-dev-allow-intra-ns",
                "namespace": "medicare-dev",
                "resource_version": "157331",
                "uid": "11822528-f323-432a-8543-3def93ec1252"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-dev-allow-intra-ns",
            "namespace": "medicare-dev"
          },
          "dependencies": [
            "module.dev.kubernetes_namespace.this"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-dev/medicare-dev-deny-all-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-dev-deny-all-ingress",
                "namespace": "medicare-dev",
                "resource_version": "157330",
                "uid": "98f4c757-94e1-48c4-8c75-123cd6c43301"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-dev-deny-all-ingress",
            "namespace": "medicare-dev"
          },
          "dependencies": [
            "module.dev.kubernetes_namespace.this"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-prod",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "medicare",
                  "environment": "prod",
                  "managed-by": "terraform"
                },
                "name": "medicare-prod",
                "resource_version": "152084",
                "uid": "aecd61c2-658e-41ed-b9bc-e559196982e0"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "medicare-prod"
          }
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_intra_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-prod/medicare-prod-allow-intra-ns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-prod-allow-intra-ns",
                "namespace": "medicare-prod",
                "resource_version": "152095",
                "uid": "44411e5a-0a1b-4f60-88b9-ed6f79a90e1b"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-prod-allow-intra-ns",
            "namespace": "medicare-prod"
          },
          "dependencies": [
            "module.production.kubernetes_namespace.this"
          ]
        }
      ]
    },
    {
      "module": "module.production",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-prod/medicare-prod-deny-all-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-prod-deny-all-ingress",
                "namespace": "medicare-prod",
                "resource_version": "152099",
                "uid": "4c773463-d73e-4e6f-a20b-d7dbb33913fc"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-prod-deny-all-ingress",
            "namespace": "medicare-prod"
          },
          "dependencies": [
            "module.production.kubernetes_namespace.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-staging",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "medicare",
                  "environment": "staging",
                  "managed-by": "terraform"
                },
                "name": "medicare-staging",
                "resource_version": "126194",
                "uid": "787a7497-8338-4e6b-910e-8775235ec41c"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "medicare-staging"
          }
        }
      ]
    },
    {
      "module": "module.staging",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_intra_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-staging/medicare-staging-allow-intra-ns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-staging-allow-intra-ns",
                "namespace": "medicare-staging",
                "resource_version": "152088",
                "uid": "8d902579-86eb-4f28-8e51-074cfec5dc33"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-staging-allow-intra-ns",
            "namespace": "medicare-staging"
          },
          "dependencies": [
            "module.staging.kubernetes_namespace.this"
          ]
        }
      ]
    },
    {
      "module": "module.staging",
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "medicare-staging/medicare-staging-deny-all-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "medicare-staging-deny-all-ingress",
                "namespace": "medicare-staging",
                "resource_version": "152087",
                "uid": "c5d4fa45-f53e-4270-b118-fc78115795ab"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "medicare-staging-deny-all-ingress",
            "namespace": "medicare-staging"
          },
          "dependencies": [
            "module.staging.kubernetes_namespace.this"
          ]
        }
      ]
    }
  ]
}